# Ultrasound_IoT

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
ultrasound-iot-borker/: Cargo.toml
ultrasound-iot-borker/config/: settings.toml
ultrasound-iot-borker/src/: lib.rs  main.rs  message.rs  settings.rs
ultrasound-iot-embedded-rp/: Cargo.toml  build.rs
ultrasound-iot-embedded-rp/src/: main.rs
ultrasound-iot-image-gen/: Cargo.toml  build.sh
ultrasound-iot-image-gen/src/: constants.rs  iq2img.rs  lib.rs  processing.rs  rf2iq.rs  uniffi_helper.rs
ultrasound-iot-server/: Cargo.toml
ultrasound-iot-server/config/: settings.toml
ultrasound-iot-server/migration/src/: lib.rs  m20250401_163440_create_patient_table.rs  m20250401_163533_create_scan_table.rs
ultrasound-iot-server/services/: Cargo.toml
ultrasound-iot-server/services/src/: lib.rs  scans.rs  utils.rs
ultrasound-iot-server/services/src/entities/: mod.rs  patient.rs  prelude.rs  scan.rs
ultrasound-iot-server/src/: app_state.rs  lib.rs  main.rs  utils.rs
ultrasound-iot-server/src/routes/: mod.rs  scan.rs  session.rs
ultrasound-iot-server/src/session/: lobby.rs  message.rs  mod.rs  session_connection.rs
ultrasound-iot-server/src/settings/: db.rs  mod.rs
