[package]
name = "ultrasound-iot-borker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
rumqttc = "0.24.0"
reqwest = { version = "0.12.12", features = ["json"] }

serde = "1.0.219"
serde_json = "1.0.140"

uuid = { version = "1.16.0", features = ["serde"] }

config = "0.15.11"

tracing = "0.1.41"