[package]
name = "ultrasound-iot-image-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
hdf5 = { version = "0.8.1", optional = true }
hdf5-sys = { version = "0.8.1", features = ["static"], optional = true }

ndarray = { version = "0.15.6", features = ["blas"] }
ndarray-linalg = "0.17"
ndarray-stats = "0.5.1"
ndarray-npy = "0.8.1"
num-complex = "0.4.6"
rustfft = "6.2.0"
basic_dsp = "*"

blas-src = { version = "0.2.0", default-features = false, features = ["accelerate"] }

tracing = "0.1.41"
tracing-subscriber = "0.3.19"

image = "0.24"
rayon = "1.6"
rand = "0.8"

uniffi = { version = "0.29.0", features = [ "cli" ] }

[build-dependencies]
uniffi = { version = "0.29.0", features = [ "build" ] }

[features]
rf2iq = ["hdf5", "hdf5-sys"]

[lib]
crate-type = ["cdylib", "staticlib"]
name = "ultrasound"

[[bin]]
name = "uniffi-bindgen-swift"
path = "uniffi-bindgen-swift.rs"