[package]
name = "ultrasound-iot-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-web = "4.10.2"
actix-web-actors = "4.3.1"
actix-files = "0.6.6"

futures = "0.3.31"

serde = "1.0.219"
serde_json = "1.0.140"

config = "0.15.11"

tracing = "0.1.41"
tracing-subscriber = "0.3.19"

uuid = { version = "1.16.0", features = ["v4"] }
secrecy = { version = "0.10.3", features = ["serde"] }

services = { path = "./services" }
migration = { path = "./migration" }