[package]
name = "services"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.219"
serde_json = "1.0.140"

tracing = { version = "0.1.41", features = ["log"] }

[dependencies.sea-orm]
version = "1.1.7"
features = [
    "debug-print",
    "runtime-async-std-native-tls",
    "sqlx-postgres",
]